--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
