--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
+    "nocache": "^4.0.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "parser": "^0.1.4",
