--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
+    
   },
   "keywords": [],
   "author": "",
